# synapse

./: .gitignore  README.md  pyproject.toml  requirements.txt
synapse/: __init__.py  analyzer.py  cli.py  parser.py  tracer.py  visualizer.py
